	  USE_WSOCK1 at compile time.
	- Cairo support: added --enable-cairo and --enable-cairoext 
          configure options.
	- visualc(6) & vc2005 devenv's are in the ide subdirectory
	- hide() and show() methods are now virtual from Fl_Widget,
	  was only virtual since Fl_Window derived classes before.
	  So now widget->hide() will work if widget is a window.

CHANGES IN FLTK 1.1.9

	- Improved color contrast in secondary selection blocks
	  of Fl_Text_Display (STR #1917)
	- Fixed regression in callback handling (STR #1918)
	- Fixed wrong relative path when absolute path has a 
	  trailing slash in fl_filename_relative (STR #1920)
	- Fixed multiple selction of files and directories in
	  Fl_File_Chooser (STR #1913)
	- Fixed MSWindows crash when selecting umlauts
	  in Fl_Help_View (STR #1912)


CHANGES IN FLTK 1.1.8

	- Documentation fixes  (STR #1454, STR #1455, STR #1456,
	  STR #1457, STR #1458, STR #1460, STR #1481, STR #1578,
	  STR #1639, STR #1645, STR #1644, STR #1792, STR #1793,
	  STR #1742, STR #1777, STR #1794, STR #1827, STR #1843,
	  STR #1796, STR #1815, STR #1726, STR #1753, STR #1855,
	  STR #1862, STR #1867, STR #1874, STR #1888)
	- Fixed library path in Makefile (STR #1885)
	- Fixed image read for partial regions on X11 
	  (STR #1716)
	- Fixed KDE/Gnome icon paths (STR #1795)
	- Fixed Tab key to wrap around menu bars (STR #1877)
	- Fixed possible timer leak in Scrollbar (STR #1880)
	- Added documentation about the potential limitations
	  of Fl::grab on newer operating systems (STR #1747)
	- Fixed lockout when mixing popups and alerts
	  (STR # 1869)
	- Fixed recursion crash in event handling (STR #1873)
	- Fixed missing return code in 'fltk-config' (STR #1875)
	- Fixed inconsistencies with CHANGED flags (STR #1719)
	- Fixed message sent to hidden widgets (STR #1849)
	- Fixed width calculation in Fl_Help_View (STR #1868)
	- Fixed offset bug in OS X pixmap code (STR #1856)
	- Fixed potential buffer overrun 
	  in Fl_Preferences (STR #1853)